openmediavault (1.0.30) stable; urgency=low

  * Fix various issues.
  * Remove SSLv2 and SSLv3 support in proftpd. Use only TLSv1 now.
  * Refactor filesystem backend. Introduce class OMVFilesystemBackendAbstract.
    All supported filesystems must extend this class. Backends must be
    registered via OMVFilesystems::registerBackend.
  * Enhance OMVStorageDeviceBackendAbstract class.
  * Mantis 0001159: Allow to disable FTP login message. To disable the
    welcome message set OMV_PROFTPD_SHOW_DISPLAYLOGIN="no" in the file
    /etc/default/openmediavault.
  * Mantis 0001161: Send cron email about samba-recycle.
  * Mantis 0001162: Disk overview from raid creation screen has empty
    column serial number and vendor ATA.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 18 Oct 2014 14:22:40 +0200

openmediavault (1.0.29) stable; urgency=low

  * Update locales.
  * Fix bug when using PHP >= 5.4.13. Enable the ability to load external
    XML entities.
  * Mantis 0000876: Daily mdadm cron job exited with return code 1.
  * Mantis 0001135: Anacron mdadm Notifications Emails.
  * Mantis 0001145: Proftpd: Ability to add directives into shares.
  * Mantis 0001146: Dashboard: Use file system label on status widget.
  * Mantis 0001149: SMART data unavailable for external USB disks.
  * Mantis 0001150: Add support for public key authentication on SSH.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 10 Oct 2014 08:27:47 +0200

openmediavault (1.0.28) stable; urgency=low

  * Update locales.
  * Refactor browser language auto-detection.
  * Improve the OMVFilesystem::getMountPoint and OMVFilesystem::isMounted
    methods.
  * Mantis 0001141: smartd: Reference disks by ATA-/SCSI-Id.
  * Mantis 0001142: Shares with spaces in the path/directory don't appear
    when using FTP/FTPS.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Oct 2014 09:57:31 +0200

openmediavault (1.0.27.3) stable; urgency=low
