@@ -6,6 +6,8 @@ openmediavault (1.0.30) stable; urgency=low
     All supported filesystems must extend this class. Backends must be
     registered via OMVFilesystems::registerBackend.
   * Enhance OMVStorageDeviceBackendAbstract class.
+  * Mantis 0001157: System/Update Manager/ upload button. Increase nginx
+    client_max_body_size to 25M.
   * Mantis 0001159: Allow to disable FTP login message. To disable the
     welcome message set OMV_PROFTPD_SHOW_DISPLAYLOGIN="no" in the file
     /etc/default/openmediavault.
